test/compile-fail/resolution/pub/in-unresolved/top.rhdl
pub(in crate::b) struct a {}
